--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Login page.
+  Generated template for the Register page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>register</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <button ion-button (click)="goToRegisterPage()">ir a register</button>
+  <button ion-button (click)="goToRegisterPage()">ir a la pagina de register</button>
 </ion-content>
