--- a/src/pages/terms/terms.html
+++ b/src/pages/terms/terms.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the Login page.
+  Generated template for the Terms page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title>terms</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <button ion-button (click)="goToRegisterPage()">ir a register</button>
+
 </ion-content>
