work in componets

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
+  <ums-rockband *ngFor="let rockband of rockbands" [rockband]="rockband"></ums-rockband>
   <button ion-button (click)="goToRegisterPage()">ir a register</button>
 </ion-content>
