--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -14,5 +14,6 @@
 
 
 <ion-content padding>
+  <ums-rockband title="nirvana" img="assets/imgs/nirvana.jpg"></ums-rockband>
   <button ion-button (click)="goToRegisterPage()">ir a la pagina de register</button>
 </ion-content>
