--- a/src/pages/terms/terms.html
+++ b/src/pages/terms/terms.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-
+  <ums-rockband title="ac/dc" img="https://images5.alphacoders.com/433/thumb-1920-433503.jpg"></ums-rockband>
 </ion-content>
