:tada: craete directive

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,6 +14,8 @@
 
 
 <ion-content padding>
+  <h1 ums-highlight>hola dsjkfhds djkfh</h1>
+  <p ums-highlight>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem possimus molestias cum veritatis, consequuntur autem beatae quisquam fuga laborum earum iure quaerat qui nisi eveniet magnam animi, officiis totam hic.</p>
   <ums-rockband *ngFor="let rockband of rockbands" [rockband]="rockband"></ums-rockband>
   <button ion-button (click)="goToRegisterPage()">ir a register</button>
 </ion-content>
