--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -16,6 +16,9 @@
 <ion-content padding>
   <h1 ums-highlight>hola dsjkfhds djkfh</h1>
   <p ums-highlight>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem possimus molestias cum veritatis, consequuntur autem beatae quisquam fuga laborum earum iure quaerat qui nisi eveniet magnam animi, officiis totam hic.</p>
+  <h1>{{ 'Nicolas' | reverse }}</h1>
+  <h1>{{ .5 | percent | reverse  }}</h1>
+  <h1>{{ today | date:'dd/MMMM/y' | reverse }}</h1>
   <ums-rockband *ngFor="let rockband of rockbands" [rockband]="rockband"></ums-rockband>
   <button ion-button (click)="goToRegisterPage()">ir a register</button>
 </ion-content>
