--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -16,4 +16,5 @@
 <ion-content padding>
   <ums-rockband title="nirvana" img="assets/imgs/nirvana.jpg"></ums-rockband>
   <button ion-button (click)="goToRegisterPage()">ir a la pagina de register</button>
+  <button ion-button (click)="goToBack()" color="danger">ir a atras</button>
 </ion-content>
